--- a/index.ipynb
+++ b/index.ipynb
@@ -161,10 +161,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "name = 'bob'"
@@ -195,7 +193,7 @@
     }
    ],
    "source": [
-    "name"
+    "name\n"
    ]
   },
   {
